--- a/assets/index.css
+++ b/assets/index.css
@@ -16,7 +16,7 @@
     background-image: url('../images/birds.png');
     transition: top .3s linear;
 }
-
+/* 点击开始样式 */
 .start{
     position: absolute;
     top: 295px;
@@ -43,7 +43,7 @@
     font-size: 36px;
     text-shadow: 1px 1px 1px  #fff;
 }
-
+/* 分数 */
 .score{
     position: absolute;
     color: #fff;
@@ -53,7 +53,7 @@
     transform: translateX(-50%);
     display: none;
 }
-
+/* 游戏结束的遮罩层 */
 .mask{
     position: absolute;
     top:0;
@@ -63,6 +63,7 @@
     background-color: #000;
     opacity: 0.7;
     display: none;
+    z-index: 2;
 }
 
 .end{
@@ -73,6 +74,7 @@
     color: red;
     text-align: center;
     display: none;
+    z-index: 3;
 }
 
 .end .over{
@@ -138,4 +140,22 @@
     font-size: 18px;  
     font-weight: bolder;
     cursor: pointer;  
+}
+
+.pipe{
+    position: absolute;
+    width: 52px;
+    height: 150px;  
+    z-index: 1;  
+}
+/* 顶部柱子 */
+.pipe.pipe-top{
+    top: 0;
+    background-image: url(../images/pipe2.png);
+    background-position-y: bottom;
+}
+/* 底部柱子 */
+.pipe.pipe-bottom{
+    bottom: 0;
+    background-image: url(../images/pipe1.png);
 }
