--- a/assets/index.css
+++ b/assets/index.css
@@ -1,3 +1,10 @@
+.game-wrapper{
+    display: flex;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+}
 #game{
     position: relative;
     width: 100%;
@@ -92,6 +99,7 @@
     color: #ff0;
 }
 
+
 .end .rank-list{
     margin-top: 20px;
     color: #09f;
@@ -104,6 +112,7 @@
     margin-bottom: 10px;
     padding: 0 10px;
     font-size: 13px;
+    min-width: 210px;
 }
 
 .end .rank-degree{
